[package]
name = "meters_glutin"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
rand = "0.6"
meters_prototty = { path = "../prototty" }
prototty_glutin = { path = "/home/steve/src/prototty/glutin" }
prototty_file_storage = { path = "/home/steve/src/prototty/file-storage" }
