[package]
name = "meters_prototty"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
rand = "0.6"
itertools = "0.8"
meters = { path = "../meters" }
prototty = "0.21"
prototty_common = { version = "0.21", features = ["serialize"] }
direction = { version = "0.17", features = ["serialize"] }
serde = "1.0"
serde_derive = "1.0"
