[package]
name = "meters_prototty"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
rand = "0.6"
itertools = "0.8"
meters = { path = "../meters" }
prototty_storage = { path = "/home/steve/src/prototty/storage" }
prototty_render = { path = "/home/steve/src/prototty/render", features = ["serialize"] }
prototty_input = { path = "/home/steve/src/prototty/input", features = ["serialize"] }
prototty_common = { path = "/home/steve/src/prototty/common", features = ["serialize"] }
direction = { version = "0.17", features = ["serialize"] }
serde = "1.0"
serde_derive = "1.0"
