[package]
name = "meters_prototty"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
rand = "0.6"
itertools = "0.8"
meters = { path = "../meters" }
prototty = { version = "0.22", features = ["serialize", "storage"] }
direction = { version = "0.17", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
