[package]
name = "punchcards"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
rand = "0.4"
append = "0.1"
direction = "0.13"
enum_primitive = "0.1"
entity_store_helper = "0.9"
grid_2d = "0.7"
grid_search = "0.7"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
entity_store_code_gen = "0.9"
