[package]
name = "punchcards_wasm"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.4"
punchcards_prototty = { path = "../prototty" }
prototty = { path = "/home/steve/src/prototty/prototty" }
prototty_wasm = { path = "/home/steve/src/prototty/wasm" }
prototty_memory_storage = { path = "/home/steve/src/prototty/memory-storage" }
