[package]
name = "meters_wasm"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
meters_prototty = { path = "../prototty" }
prototty_wasm_render = { path = "/home/steve/src/prototty/wasm-render" }
prototty_wasm_input = { path = "/home/steve/src/prototty/wasm-input" }
prototty_wasm_storage = { path = "/home/steve/src/prototty/wasm-storage" }
rand = { version = "0.6", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
